--- a/app/src/main/res/layout/activity_edit_chat.xml
+++ b/app/src/main/res/layout/activity_edit_chat.xml
@@ -2,7 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/edit_chat_sv"
+    android:id="@+id/activity_edit_chat_sv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/edit_title_tv"
+            android:id="@+id/activity_edit_chat_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -38,7 +38,7 @@
             android:text="@string/wristassist_last_modified"/>
 
         <TextView
-            android:id="@+id/modified_tv"
+            android:id="@+id/activity_edit_chat_modified_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -57,7 +57,7 @@
             android:text="@string/wristassist_chat_cost"/>
 
         <TextView
-            android:id="@+id/chat_cost_tv"
+            android:id="@+id/activity_edit_chat_cost_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -72,7 +72,7 @@
             android:layout_marginBottom="48dp">
 
             <ImageButton
-                android:id="@+id/edit_btn"
+                android:id="@+id/activity_edit_chat_edit_btn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
@@ -82,14 +82,14 @@
                 android:src="@drawable/twotone_edit_24"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                app:layout_constraintEnd_toStartOf="@+id/delete_btn"
+                app:layout_constraintEnd_toStartOf="@+id/activity_edit_chat_delete_btn"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
             <ImageButton
-                android:id="@+id/delete_btn"
+                android:id="@+id/activity_edit_chat_delete_btn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
@@ -101,7 +101,7 @@
                 android:adjustViewBounds="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/edit_btn"
+                app:layout_constraintStart_toEndOf="@+id/activity_edit_chat_edit_btn"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
