--- a/app/src/main/res/layout/item_saved_chat.xml
+++ b/app/src/main/res/layout/item_saved_chat.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/saved_chat_container"
+    android:id="@+id/item_saved_chat_ll"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/saved_chat_title"
+        android:id="@+id/item_saved_chat_title_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="3"
