--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/input_sv"
+    android:id="@+id/activity_input_sv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/input_title_tv"
+            android:id="@+id/activity_input_title_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
@@ -25,7 +25,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/input_content_et"
+            android:id="@+id/activity_input_content_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
@@ -34,7 +34,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/input_title2_tv"
+            android:id="@+id/activity_input_title2_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
@@ -45,7 +45,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/input_content2_et"
+            android:id="@+id/activity_input_content2_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
@@ -54,7 +54,7 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/input_ok_btn"
+            android:id="@+id/activity_input_ok_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
@@ -63,7 +63,7 @@
             android:text="@string/wristassist_okay" />
 
         <Button
-            android:id="@+id/input_cancel_btn"
+            android:id="@+id/activity_input_cancel_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
