--- a/app/src/main/res/layout/layout_chat_header.xml
+++ b/app/src/main/res/layout/layout_chat_header.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/title_tv"
+        android:id="@+id/layout_chat_header_title_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
