--- a/app/src/main/res/layout/viewpager_info.xml
+++ b/app/src/main/res/layout/viewpager_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/info_tv"
+        android:id="@+id/viewpager_onboarding_info_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
