--- a/app/src/main/res/layout/viewpager_welcome.xml
+++ b/app/src/main/res/layout/viewpager_welcome.xml
@@ -11,7 +11,7 @@
         app:layout_boxedEdges="all">
 
         <TextView
-            android:id="@+id/welcome_tv"
+            android:id="@+id/viewpager_onboarding_welcome_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -22,14 +22,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_iv" />
+            app:layout_constraintTop_toBottomOf="@+id/viewpager_onboarding_welcome_iv" />
 
         <ImageView
-            android:id="@+id/welcome_iv"
+            android:id="@+id/viewpager_onboarding_welcome_iv"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:background="@drawable/wristassist_logo"
-            app:layout_constraintBottom_toTopOf="@+id/welcome_tv"
+            app:layout_constraintBottom_toTopOf="@+id/viewpager_onboarding_welcome_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
