--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_chat_rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,14 +13,4 @@
         android:layout_alignParentTop="true"
         android:layout_marginHorizontal="8dp"
         android:textSize="15sp"/>
-
-    <TextView
-        android:id="@+id/item_chat_cost_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/item_chat_content_tv"
-        android:layout_alignParentEnd="true"
-        android:textStyle="italic"
-        android:visibility="gone"
-        tools:visibility="visible"/>
 </RelativeLayout>
