more padding in settings footer

--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -121,6 +121,9 @@
             app:title="@string/wristassist_custom_server"
             android:defaultValue="false"/>
 
+        <Preference
+            app:dependency="net.devemperor.wristassist.custom_server" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
